--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </h1>
         </header>
         <nav>
-            <a class="home button" href="index.html">home</a>
+            <a class="home button" href="index.html">project</a>
             <br><br><br><br><br><br>
             <a class="contact button" href="contact.html">contact </a>
             <br><br><br><br><br><br>
