--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
         </h1>
         <h2>Resume</h2>
         <br>
-        <a class="home normal button" href="index.html">home</a>
+        <a class="home normal button" href="index.html">project</a>
         <br>
         <a class="contact button" href="contact.html">contact</a>
         <br>
