--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         </h1>
     </header>
     <nav>
-        <a class="home normal" href="index.html">home</a>
+        <a class="home normal" href="index.html">project</a>
         <br>
         <a class="contact highlight" href="contact.html">contact</a>
         <br>
