--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
         </h1>
     </header>
     <nav>
-        <a class="project normal" href="index.html">project</a>
+        <a class="home" href="index.html">home</a>
         <br>
-        <a class="contact highlight" href="contact.html">contact</a>
+        <a class="contact" href="contact.html">contact</a>
         <br>
         <a class="profile" href="profile.html">profile</a>
     </nav>
