--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             </h1>
         </header>
         <nav>
-            <a class="project button" href="index.html">project</a>
-            <br><br><br><br><br><br>
             <a class="contact button" href="contact.html">contact </a>
             <br><br><br><br><br><br>
             <a class="profile button" href="profile.html">profile</a>
+            <br><br><br><br><br><br>
+            <a class="project" herf="">project</a>
         </nav>
         <footer>&copy; 2017</footer>
     </div>
