--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <br><br><br><br><br><br>
             <a class="profile button" href="profile.html">profile</a>
             <br><br><br><br><br><br>
-            <a class="project" herf="">project</a>
+            <a class="project button" href="project.html">project</a>
         </nav>
         <footer>&copy; 2017</footer>
     </div>
