--- a/profile.html
+++ b/profile.html
@@ -18,6 +18,8 @@
         <a class="contact button" href="contact.html">contact</a>
         <br>
         <a class="profile highlight button" href="profile.html">profile</a>
+        <br>
+        <a class="project button" herf="project.html">project</a>
     </nav>
     <section>
         <h3>Samuel Choi</h3>
