--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,8 @@
         <a class="contact" href="contact.html">contact</a>
         <br>
         <a class="profile" href="profile.html">profile</a>
+        <br>
+        <a class="project" herf="project.html">project</a>
     </nav>
     <section>
         <h2>Email</h2>
