--- a/project.html
+++ b/project.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" herf="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1><span class="span0">P</span><span class="span1">r</span><span class="span2">o</span><span class="span3">j</span><span class="span4">e</span><span class="span5">c</span><span class="span6">t</span>
+        <h1>
+            <span class="span0">P</span><span class="span1">r</span><span class="span2">o</span><span class="span3">j</span><span class="span4">e</span><span class="span5">c</span><span class="span6">t</span>
         </h1>
+        <section></section>
     </header>
+    <nav>
+        <a class="home" href="index.html">home</a>
+        <br>
+        <a class="contact" href="contact.html">contact</a>
+        <br>
+        <a class="profile" href="profile.html">profile</a>
+        <br>
+        <a class="project" href="project.html">project</a>
+        <br>
+        <a class="canvas" href="canvas.html">canvas</a>
+        <br>
+        <a class="soldier" href="soldier.html">soldier</a>
+        <br>
+        <a class="building" href="building.html">building</a>
+    </nav>
 </body>
 </html>
