--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <br>
         <a class="profile" href="profile.html">profile</a>
         <br>
-        <a class="project" herf="project.html">project</a>
+        <a class="project" href="project.html">project</a>
     </nav>
     <section>
         <h2>Email</h2>
