--- a/olympic.html
+++ b/olympic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -12,13 +12,13 @@
             <br>
             <a class="contact" href="contact.html">contact</a>
             <br>
-            <a class="profile" href="profile.html"profile></a>
+            <a class="profile" href="profile.html">profile</a>
             <br>
             <a class="project" href="project.html">project</a>
         </nav>
         <main>
-            <canvas id="my-canvas" height="1025" width="1024"></canvas>
+            <canvas id="my-canvas" height="560" width="1000"></canvas>
         </main>
-        <script src="building.js"></script>
+        <script src="olympic.js"></script>
     </body>
 </html>
