--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
         <br>
         <a class="profile highlight button" href="profile.html">profile</a>
         <br>
-        <a class="project button" herf="project.html">project</a>
+        <a class="project button" href="project.html">project</a>
     </nav>
     <section>
         <h3>Samuel Choi</h3>
