--- a/project.html
+++ b/project.html
@@ -24,6 +24,8 @@
         <a class="soldier" href="soldier.html">soldier</a>
         <br>
         <a class="building" href="building.html">building</a>
+        <br>
+        <a class="olympic" href="olympic.html">olympic</a>
     </nav>
 </body>
 </html>
