robot almost done

--- a/project.html
+++ b/project.html
@@ -26,6 +26,8 @@
         <a class="building" href="building.html">building</a>
         <br>
         <a class="olympic" href="olympic.html">olympic</a>
+        <br>
+        <a class="robot" href="robot.html">robot</a>
     </nav>
 </body>
 </html>
